# techflow-task-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: kanban-cards.md  pitch-script.md  uml.md
src/techflow/: __init__.py  app.py  database.py  server.py  validation.py  views.py
static/: style.css
tests/: __init__.py  test_app.py  test_database.py  test_validation.py
