[project]
name = "techflow-task-manager"
version = "1.1.0"
description = "Sistema web acadêmico para gerenciamento ágil de tarefas"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

